--- a/inequality.html
+++ b/inequality.html
@@ -277,8 +277,8 @@
       </div>
 
       <p id="explanation" class="explanation">
-        In the UK, the richest 10% of people own around 57% of total wealth, while the
-        bottom 50% own only a few percent. Wealth is much more concentrated than income.
+        In the UK, the richest 10% of people own around 43% of total wealth, while the
+        bottom 50% own only 9%. Wealth is much more concentrated than income.
       </p>
 
       <p class="meta">
@@ -301,14 +301,14 @@
 
       <div class="stat-box">
         <div>
-          <div id="stat-main-number" class="stat-main-number">57%</div>
+          <div id="stat-main-number" class="stat-main-number">43%</div>
           <div id="stat-main-label" class="stat-main-label">
             of all wealth is held by the top 10% (UK)
           </div>
         </div>
         <div>
           <div id="stat-note" class="stat-note">
-            That means the remaining 90% of people share the other 43% of wealth.
+            That means the remaining 90% of people share the other 57% of wealth.
           </div>
           <div id="stat-compare" class="stat-compare" style="margin-top:0.25rem;">
             Try switching to “World” to see how global inequality compares.
@@ -324,9 +324,9 @@
     // World estimates loosely based on World Inequality / UBS data
     const data = {
       uk: {
-        top1: { share: 23 },
-        top10: { share: 57 },
-        bottom50: { share: 5 }
+        top1: { share: 10 },
+        top10: { share: 43 },
+        bottom50: { share: 9 }
       },
       world: {
         top1: { share: 44 },
