--- a/index.html
+++ b/index.html
@@ -1,175 +1,155 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Wealth Tax Timeline</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="UTF-8">
+<title>Wealth Tax Around the World</title>
 
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #062f1f, #0b3d2e);
+  color: #e6fff2;
+  text-align: center;
+}
 
-    body {
-      min-height: 100vh;
-      background: radial-gradient(circle at top left, #020617, #0b1220 50%, #020617);
-      color: #e5e7eb;
-      display: flex;
-      justify-content: center;
-      align-items: stretch;
-      padding: 1.5rem;
-    }
+.container {
+  max-width: 1000px;
+  margin: 40px auto;
+  padding: 30px;
+  background: rgba(0, 60, 40, 0.6);
+  border-radius: 20px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
+}
 
-    .app {
-      width: 100%;
-      max-width: 1100px;
-      background: rgba(15, 23, 42, 0.9);
-      border-radius: 1.5rem;
-      border: 1px solid rgba(148, 163, 184, 0.5);
-      box-shadow: 0 24px 50px rgba(15, 23, 42, 0.8);
-      display: grid;
-      grid-template-columns: minmax(0, 1.1fr) minmax(0, 1.2fr);
-      gap: 1.5rem;
-      padding: 1.5rem;
-    }
+h1 {
+  margin-top: 0;
+  font-size: 30px;
+}
 
-    header {
-      grid-column: 1 / -1;
-      margin-bottom: 0.5rem;
-    }
+.subtitle {
+  color: #9ee6c8;
+  margin-bottom: 25px;
+}
 
-    header h1 {
-      font-size: 1.4rem;
-      font-weight: 600;
-      color: #f9fafb;
-    }
+svg {
+  width: 100%;
+  height: auto;
+}
 
-    header p {
-      margin-top: 0.3rem;
-      font-size: 0.9rem;
-      color: #9ca3af;
-    }
+.country {
+  stroke: #0b3d2e;
+  stroke-width: 0.5;
+  transition: 0.3s;
+  cursor: pointer;
+}
 
-    .timeline-column {
-      border-right: 1px solid rgba(55, 65, 81, 0.9);
-      padding-right: 1.2rem;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
+.country:hover {
+  opacity: 0.8;
+}
 
-    .timeline-header {
-      font-size: 0.8rem;
-      text-transform: uppercase;
-      color: #9ca3af;
-      letter-spacing: 0.12em;
-    }
+.has-tax {
+  fill: #2ecc71;
+}
 
-    .timeline-strip {
-      margin-top: 0.5rem;
-      padding: 0.7rem 0;
-      border-radius: 999px;
-      background: radial-gradient(circle at left, #111827, #020617);
-      border: 1px solid rgba(55, 65, 81, 0.9);
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      overflow-x: auto;
-      scrollbar-width: thin;
-      scrollbar-color: #4b5563 transparent;
-    }
+.no-tax {
+  fill: #145a32;
+}
 
-    .timeline-strip::-webkit-scrollbar {
-      height: 6px;
-    }
-    .timeline-strip::-webkit-scrollbar-track {
-      background: transparent;
-    }
-    .timeline-strip::-webkit-scrollbar-thumb {
-      background: #4b5563;
-      border-radius: 999px;
-    }
+.tooltip {
+  position: absolute;
+  background: #062f1f;
+  color: #e6fff2;
+  padding: 8px 12px;
+  border-radius: 8px;
+  font-size: 14px;
+  pointer-events: none;
+  opacity: 0;
+  transition: 0.2s;
+}
 
-    .chip {
-      flex: 0 0 auto;
-      padding: 0.45rem 0.8rem;
-      border-radius: 999px;
-      border: 1px solid rgba(148, 163, 184, 0.5);
-      background: rgba(15, 23, 42, 0.8);
-      font-size: 0.78rem;
-      display: inline-flex;
-      align-items: center;
-      gap: 0.35rem;
-      cursor: pointer;
-      transition: all 0.16s ease-out;
-      white-space: nowrap;
-    }
+.legend {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  font-size: 14px;
+}
 
-    .chip-year {
-      font-weight: 600;
-      color: #e5e7eb;
-    }
+.legend div {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
 
-    .chip-label {
-      color: #9ca3af;
-    }
+.legend span {
+  width: 18px;
+  height: 18px;
+  display: inline-block;
+  border-radius: 4px;
+}
+</style>
+</head>
 
-    .chip-type-pill {
-      font-size: 0.7rem;
-      padding: 0.1rem 0.45rem;
-      border-radius: 999px;
-      border: 1px solid rgba(55, 65, 81, 0.9);
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-    }
+<body>
 
-    .chip-type-intro {
-      border-color: rgba(56, 189, 248, 0.8);
-      color: #7dd3fc;
-    }
+<div class="container">
+  <h1>Wealth Tax Around the World</h1>
+  <div class="subtitle">Countries that currently have a net wealth tax (2024)</div>
 
-    .chip-type-abolish {
-      border-color: rgba(248, 113, 113, 0.8);
-      color: #fecaca;
-    }
+  <!-- Simple SVG World Map (abbreviated example) -->
+  <svg viewBox="0 0 1000 500">
 
-    .chip-type-reform {
-      border-color: rgba(129, 140, 248, 0.8);
-      color: #c7d2fe;
-    }
+    <!-- Spain -->
+    <rect x="420" y="220" width="20" height="15" class="country has-tax" data-name="Spain"></rect>
 
-    .chip-type-current {
-      border-color: rgba(52, 211, 153, 0.8);
-      color: #a7f3d0;
-    }
+    <!-- Norway -->
+    <rect x="450" y="120" width="15" height="15" class="country has-tax" data-name="Norway"></rect>
 
-    .chip.active {
-      background: linear-gradient(135deg, #1d283a, #0f172a);
-      border-color: #60a5fa;
-      box-shadow: 0 0 0 1px rgba(37, 99, 235, 0.4);
-    }
+    <!-- Switzerland -->
+    <rect x="440" y="210" width="10" height="10" class="country has-tax" data-name="Switzerland"></rect>
 
-    .timeline-body {
-      margin-top: 0.4rem;
-      padding-left: 0.4rem;
-    }
+    <!-- France (abolished) -->
+    <rect x="430" y="210" width="15" height="15" class="country no-tax" data-name="France (abolished 2018)"></rect>
 
-    .hint {
-      font-size: 0.8rem;
-      color: #9ca3af;
-      margin-bottom: 0.6rem;
-    }
+    <!-- UK -->
+    <rect x="420" y="180" width="15" height="15" class="country no-tax" data-name="United Kingdom"></rect>
 
-    .event-list {
-      display: grid;
-      gap: 0.4rem;
-      font-size: 0.8rem;
-      color: #9ca3af;
-    }
+    <!-- USA -->
+    <rect x="180" y="220" width="40" height="20" class="country no-tax" data-name="United States"></rect>
+
+  </svg>
+
+  <div class="legend">
+    <div><span style="background:#2ecc71;"></span> Has Wealth Tax</div>
+    <div><span style="background:#145a32;"></span> No Wealth Tax</div>
+  </div>
+
+</div>
+
+<div class="tooltip" id="tooltip"></div>
+
+<script>
+const tooltip = document.getElementById("tooltip");
+const countries = document.querySelectorAll(".country");
+
+countries.forEach(country => {
+  country.addEventListener("mousemove", function(e) {
+    tooltip.style.opacity = 1;
+    tooltip.innerHTML = country.dataset.name;
+    tooltip.style.left = e.pageX + 10 + "px";
+    tooltip.style.top = e.pageY - 25 + "px";
+  });
+
+  country.addEventListener("mouseleave", function() {
+    tooltip.style.opacity = 0;
+  });
+});
+</script>
+
+</body>
+</html>
+
 
     .event-list span {
       color: #e5e7eb;
