--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     .sidebar {
       padding: 1.5rem;
       background: radial-gradient(circle at top left, #0f3f2f, #041f17);
-      border-left: 1px solid rgba(46, 204, 113, 0.3);
+      border-left: 1px solid rgba(46, 204, 113, 0.4);
       display: flex;
       flex-direction: column;
       gap: 1rem;
@@ -78,24 +78,24 @@
     }
 
     .pill.net-tax {
-      background: rgba(46, 204, 113, 0.15);
+      background: rgba(46, 204, 113, 0.2);
       color: #a7f3d0;
-      border-color: rgba(46, 204, 113, 0.6);
+      border-color: rgba(46, 204, 113, 0.7);
     }
 
     .pill.no-net-tax {
-      background: rgba(20, 83, 45, 0.5);
+      background: rgba(20, 83, 45, 0.6);
       color: #d1fae5;
     }
 
     .pill.alternative {
-      background: rgba(132, 204, 22, 0.15);
+      background: rgba(132, 204, 22, 0.2);
       color: #d9f99d;
-      border-color: rgba(132, 204, 22, 0.6);
+      border-color: rgba(132, 204, 22, 0.7);
     }
 
     .card {
-      background: rgba(0, 50, 35, 0.8);
+      background: rgba(0, 50, 35, 0.85);
       border-radius: 1rem;
       padding: 1rem 1.2rem;
       border: 1px solid rgba(46, 204, 113, 0.3);
@@ -170,9 +170,79 @@
       }
       .sidebar {
         border-left: none;
-        border-top: 1px solid rgba(46, 204, 113, 0.3);
+        border-top: 1px solid rgba(46, 204, 113, 0.4);
       }
     }
   </style>
 </head>
 <body>
+  <div class="layout">
+    <div id="map"></div>
+    <aside class="sidebar">
+      <div>
+        <h1>Global Wealth Taxes Explorer</h1>
+        <p style="font-size:0.9rem; margin-top:0.35rem;">
+          Click a country to see whether it has a net wealth tax and how it is designed.
+        </p>
+
+        <div class="legend">
+          <span class="legend-item">
+            <span class="legend-swatch net"></span> Net wealth tax
+          </span>
+          <span class="legend-item">
+            <span class="legend-swatch alt"></span> Asset-based / alternatives
+          </span>
+          <span class="legend-item">
+            <span class="legend-swatch none"></span> No net wealth tax
+          </span>
+        </div>
+      </div>
+
+      <div id="info-card" class="card">
+        <div>
+          <div class="card-section-title">Country</div>
+          <h2 id="country-name">United Kingdom</h2>
+        </div>
+        <div id="summary-text">
+          The UK does not have a broad annual net wealth tax.
+        </div>
+      </div>
+    </aside>
+  </div>
+
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+  <script>
+    const map = L.map("map", {
+      zoomControl: true,
+      minZoom: 1.3,
+      worldCopyJump: true
+    }).setView([20, 0], 2);
+
+    L.tileLayer(
+      "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
+      {
+        maxZoom: 19,
+        attribution: "&copy; OpenStreetMap"
+      }
+    ).addTo(map);
+
+    function style() {
+      return {
+        fillColor: "#14532d",
+        weight: 0.7,
+        opacity: 1,
+        color: "#064e3b",
+        fillOpacity: 0.75
+      };
+    }
+
+    fetch("https://raw.githubusercontent.com/johan/world.geo.json/master/countries.geo.json")
+      .then(res => res.json())
+      .then(data => {
+        L.geoJSON(data, { style }).addTo(map);
+      });
+  </script>
+</body>
+</html>
+
